cmake_minimum_required(VERSION 2.8)

PROJECT(DESIGN_PATTERN)

SET(PATTERN_CONFIG_FILE pattern_config.cmake)
FIND_PATH(CONFIG_FILE ${PATTERN_CONFIG_FILE} ${PROJECT_SOURCE_DIR})

IF(CONFIG_FILE)
	MESSAGE("## Project config file ${CONFIG_FILE} found")
	INCLUDE(pattern_config.cmake)
ENDIF()

ENABLE_TESTING()

IF (NOT BUILD_CONFIGURATION)
	SET(BUILD_CONFIGURATIONS -DDEBUG)
ENDIF()

MESSAGE("## Using configurations: ${BUILD_CONFIGURATIONS}")

IF (DEFINED BUILD_CONFIGURATION)
	ADD_DEFINITIONS(${BUILD_CONFIGURATIONS})
ENDIF()

FOREACH(module ${PATTERN_DIR_LIST})
	SET(dir ${module})
	SET(sub_binary_dir ${PROJECT_BINARY_DIR}/${dir})

	ADD_SUBDIRECTORY(${dir})

	INSTALL(FILES ${sub_binary_dir}/${module}
			PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
						GROUP_READ GROUP_WRITE GROUP_EXECUTE
						WORLD_READ WORLD_EXECUTE
			CONFIGURATIONS ${BUILD_CONFIGURATION}
			DESTINATION ${PROJECT_BINARY_DIR}/bin)
	ADD_TEST(test-${module} ${sub_binary_dir}/${module})
ENDFOREACH()

