cmake_minimum_required(VERSION 2.8)

PROJECT(DESIGN_PATTERN)

SET(PATTERN_CONFIG_FILE pattern_config.cmake)
FIND_FILE(CONFIG_FILE ${PATTERN_CONFIG_FILE} ${PROJECT_SOURCE_DIR})

IF(CONFIG_FILE)
	MESSAGE("## Project config file ${CONFIG_FILE} found")
	INCLUDE(pattern_config.cmake)
ENDIF()

ENABLE_TESTING()

IF (NOT BUILD_CONFIGURATION)
	SET(BUILD_CONFIGURATIONS -DDEBUG)
ENDIF()

MESSAGE("## Using configurations: ${BUILD_CONFIGURATIONS}")

IF (DEFINED BUILD_CONFIGURATION)
	ADD_DEFINITIONS(${BUILD_CONFIGURATIONS})
ENDIF()

FOREACH(module ${PATTERN_DIR_LIST})
	SET(dir ${module})
	MESSAGE("## Module ${dir} found")

	ADD_SUBDIRECTORY(${dir})

	ADD_TEST(test-${module} ${sub_binary_dir}/${module})
ENDFOREACH()

