cmake_minimum_required(VERSION 2.8)

PROJECT(DESIGN_PATTERN)

SET(BUILD_CONFIGURATIONS -DDEBUG)
MESSAGE("## Using configurations: ${BUILD_CONFIGURATIONS}")

SET(PATTERN_CONFIG_FILE pattern_config.cmake)
FIND_FILE(CONFIG_FILE ${PATTERN_CONFIG_FILE} ${PROJECT_SOURCE_DIR})

IF(CONFIG_FILE)
	MESSAGE("## Project config file ${CONFIG_FILE} found")
	INCLUDE(pattern_config.cmake)
ENDIF()

ENABLE_TESTING()

FOREACH(module ${PATTERN_DIR_LIST})
	SET(dir ${module})
	MESSAGE("## Module ${dir} found")

	IF (DEFINED BUILD_CONFIGURATIONS)
		ADD_DEFINITIONS(${BUILD_CONFIGURATIONS})
	ENDIF()

	ADD_SUBDIRECTORY(${dir})

	ADD_TEST(test-${module} ${PROJECT_BINARY_DIR}/${module}/${module})
ENDFOREACH()

