PROJECT (FACTORY)

SET (TAR factory)
SET (SRC_DIR src)

SET (INSTALLED_DIR ${PROJECT_BINARY_DIR}/../bin)

AUX_SOURCE_DIRECTORY(${SRC_DIR} SRC)

ADD_EXECUTABLE(${TAR} ${SRC})

INSTALL(FILES ${sub_binary_dir}/${module}
		PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
					GROUP_READ GROUP_WRITE GROUP_EXECUTE
					WORLD_READ WORLD_EXECUTE
		CONFIGURATIONS ${BUILD_CONFIGURATION}
		DESTINATION ${INSTALLED_DIR})

